# third_party_opensles

./: BUILD.gn  OAT.xml  README.OpenSource  bundle.json  openSLES.ndk.json
api/1.0.1/: OpenSLES.h  OpenSLES_OpenHarmony.h  OpenSLES_OpenHarmony_IID.c  OpenSLES_OpenHarmony_IID.cpp
