# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos/ndk/ndk.gni")

config("libSLES_public_config") {
  include_dirs = [ "api" ]
}

group("libSLES") {
  public_configs = [ ":libSLES_public_config" ]
}

ohos_ndk_headers("sles_header") {
  dest_dir = "$ndk_headers_out_dir/SLES"
  sources = [
    "//third_party/openSLES/api/1.0.1/OpenSLES.h",
    "//third_party/openSLES/api/1.0.1/OpenSLES_OpenHarmony.h",
    "//third_party/openSLES/api/1.0.1/OpenSLES_Platform.h",
  ]
}

ohos_ndk_library("libOpenSLES_ndk") {
  output_name = "OpenSLES"
  output_extension = "so"
  ndk_description_file = "./openSLES.ndk.json"
  system_capability = "SystemCapability.Multimedia.Audio.Core"
  system_capability_headers = [
    "SLES/OpenSLES.h",
    "SLES/OpenSLES_Platform.h",
    "SLES/OpenSLES_OpenHarmony.h",
  ]
}
